--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang='fr'>
     <head>
-        <meta charset="utf-8" />
+        <meta charset='utf-8' />
         <title>Nexus</title>
     </head>
 
     <body>
-        <div id="root"></div>
+        <div id='root'></div>
     </body>
 </html>
